# aristotle

./: .gitignore  Makefile  README.md
.github/workflows/: deploy-api.yml  deploy-model.yml  deploy-search.yml
api/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start.sh
api/app/: config.py  db.py  documents.py  errors.py  events.py  main.py  model_health.py  models.py
api/app/agent/: deps.py  factory.py  model_trace.py  runtime.py
api/app/agent/capabilities/: __init__.py  documents.py  local_web.py  research.py  sandbox.py  utilities.py
api/app/agent/specs/: aristotle.yaml
api/app/evals/: live_research.py  research.py
api/app/services/: model.py  sandbox.py  sandbox_ast.py  search.py  wake.py
api/app/websocket/: chat.py
api/tests/: test_artifacts_endpoint.py  test_chat_attachments.py  test_chat_cancellation.py  test_documents.py  test_events.py  test_research_evals.py  test_research_tools.py  test_runtime_previews.py  test_sandbox_ast.py  test_sandbox_capability.py  test_sandbox_executor.py  test_services_endpoint.py  test_wake.py
api/tests/evals/research/: blocked_source_question.json  broad_research_multi_run.json  official_docs_question.json  simple_current_fact.json  stable_concept_no_search.json
model/: .dockerignore  .env.example  Dockerfile  README.md  start.sh
model/scripts/: smoke.sh
search/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  start.sh
search/app/: config.py  main.py  models.py  (+2 more)
web/: .env.example  README.md  index.html  package-lock.json  package.json
(+14 files in other folders)
